Fixed whiteapce visibility issue

--- a/style.css
+++ b/style.css
@@ -47,3 +47,7 @@ p{
     top: 90%;
     width: 98.5%;
 }
+
+.whitespace{
+    height: 80px;
+}
